care-australia-uat/force-app/main/default/objects/stripe_batch_setting__c/stripe_batch_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>contains setting related to batch class on stripe</description>
    <label>Stripe batch Setting</label>
</CustomObject>