care-australia-uat/force-app/main/default/objects/stripe_batch_setting__c/fields/Batch_Query__c.field-meta.xml
<CustomField>
    <fullName>Batch_Query__c</fullName>
    <label>Batch Query</label>
    <type>TextArea</type>
</CustomField>