care-australia-uat/force-app/main/default/objects/stripe_batch_setting__c/fields/Last_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_At__c</fullName>
    <description>Store the last batch run date used in Stripe Payment batch only</description>
    <label>Last Run At</label>
    <type>Date</type>
</CustomField>