care-australia-uat/force-app/main/default/objects/stripe_batch_setting__c/fields/Last_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_DateTime__c</fullName>
    <description>Store the last batch run date time used in Stripe Customer and Subscription batch only</description>
    <label>Last Run DateTime</label>
    <type>DateTime</type>
</CustomField>