care-australia-uat/force-app/main/default/objects/stripe_batch_setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Query__c</columns>
    <columns>Batch_Size__c</columns>
    <columns>Description__c</columns>
    <columns>Last_Run_At__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>